@@ -17,7 +17,6 @@
 package org.springframework.web.servlet.mvc.method.annotation;
 
 import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Set;
@@ -134,14 +133,13 @@ class MethodValidationTests {
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).as("Method validation unexpected").isEqualTo(0);
 
-		assertBeanResult(ex.getBindingResult(), "student", Collections.singletonList(
-				"""
+		assertBeanResult(ex.getBindingResult(), "student", List.of("""
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [student.name,name]; arguments []; default message [name],10,1]; \
-			default message [size must be between 1 and 10]"""));
-
+			default message [size must be between 1 and 10]"""
+		));
 	}
 
 	@Test
@@ -154,8 +152,7 @@ class MethodValidationTests {
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).as("Method validation unexpected").isEqualTo(0);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
@@ -179,16 +176,15 @@ class MethodValidationTests {
 
 		assertThat(ex.getAllValidationResults()).hasSize(2);
 
-		assertBeanResult(ex.getBeanResults().get(0), "student", Collections.singletonList(
-				"""
+		assertBeanResult(ex.getBeanResults().get(0), "student", List.of("""
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [student.name,name]; arguments []; default message [name],10,1]; \
-			default message [size must be between 1 and 10]"""));
+			default message [size must be between 1 and 10]"""
+		));
 
-		assertValueResult(ex.getValueResults().get(0), 2, "123", Collections.singletonList(
-				"""
+		assertValueResult(ex.getValueResults().get(0), 2, "123", List.of("""
 			org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [Size.validController#handle.myHeader,Size.myHeader,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
@@ -212,8 +208,7 @@ class MethodValidationTests {
 		assertThat(jakartaValidator.getValidationCount()).isEqualTo(2);
 		assertThat(jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'person' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.person.name,Size.name,Size.java.lang.String,Size]; \
@@ -237,21 +232,20 @@ class MethodValidationTests {
 
 		assertThat(ex.getAllValidationResults()).hasSize(2);
 
-		assertBeanResult(ex.getBeanResults().get(0), "personList", Collections.singletonList(
-				"""
-				Field error in object 'personList' on field 'name': rejected value [Faustino1234]; \
-				codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
-				arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
-				codes [personList.name,name]; arguments []; default message [name],10,1]; \
-				default message [size must be between 1 and 10]"""));
+		assertBeanResult(ex.getBeanResults().get(0), "personList", List.of("""
+			Field error in object 'personList' on field 'name': rejected value [Faustino1234]; \
+			codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
+			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
+			codes [personList.name,name]; arguments []; default message [name],10,1]; \
+			default message [size must be between 1 and 10]"""
+		));
 
-		assertBeanResult(ex.getBeanResults().get(1), "personList", Collections.singletonList(
-				"""
-				Field error in object 'personList' on field 'name': rejected value [Cayetana6789]; \
-				codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
-				arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
-				codes [personList.name,name]; arguments []; default message [name],10,1]; \
-				default message [size must be between 1 and 10]"""
+		assertBeanResult(ex.getBeanResults().get(1), "personList", List.of("""
+			Field error in object 'personList' on field 'name': rejected value [Cayetana6789]; \
+			codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
+			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
+			codes [personList.name,name]; arguments []; default message [name],10,1]; \
+			default message [size must be between 1 and 10]"""
 		));
 
 	}
@@ -267,8 +261,7 @@ class MethodValidationTests {
 		assertThat(jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 2 errors
 			Field error in object 'person' on field 'name': rejected value [name=Faustino1234]; \
 			codes [TOO_LONG.person.name,TOO_LONG.name,TOO_LONG.java.lang.String,TOO_LONG]; \
@@ -289,8 +282,7 @@ class MethodValidationTests {
 		RequestMappingHandlerAdapter springValidatorHandlerAdapter = initHandlerAdapter(new PersonValidator());
 		springValidatorHandlerAdapter.handle(this.request, this.response, hm);
 
-			assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [TOO_LONG.student.name,TOO_LONG.name,TOO_LONG.java.lang.String,TOO_LONG]; \
